--- a/src/Navbar.scss
+++ b/src/Navbar.scss
@@ -3,11 +3,13 @@
 .navbar {
   border-bottom: $light-blue solid 2px;
   color: $white;
-  position: relative;
+  position: sticky;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 3em;
+  background-color: $dark-blue;
+  top: 0;
 }
 
 .button {
