Add close btn, remove btn from nav bar, add style for a movie preview page

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import './_variables.scss';
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 
 * {
   margin: 0px;
@@ -14,6 +15,7 @@ html {
   background-color: $dark-blue;
   height: 100%;
   margin: 0px;
+  font-family: 'Quicksand', sans-serif;
 }
 
 #blockColorblindContent {
