--- a/src/MoviePreview/MoviePreview.scss
+++ b/src/MoviePreview/MoviePreview.scss
@@ -82,4 +82,14 @@
   cursor: pointer;
 }
 
+.error-message {
+  height: 100vh;
+  color: $white;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 
