Add rebase of new error cehck branch

--- a/src/Movies/Movies.scss
+++ b/src/Movies/Movies.scss
@@ -6,3 +6,10 @@
   flex-wrap: wrap;
   justify-content: space-around;
 }
+
+.section-heading {
+  font-size: 2em;
+  color: $white;
+  margin: 1em 10em;
+  border-bottom: $white 1px solid;
+}
