--- a/src/Movies/Movies.scss
+++ b/src/Movies/Movies.scss
@@ -10,6 +10,6 @@
 .section-heading {
   font-size: 2em;
   color: $white;
-  margin: 1em 10em;
+  margin: 1em 20%;
   border-bottom: $white 1px solid;
 }
