--- a/src/TrailerPreview/TrailerPreview.scss
+++ b/src/TrailerPreview/TrailerPreview.scss
@@ -2,7 +2,9 @@
 
 .player-wrapper {
   position: relative;
-  padding-top: 56.25%;
+  padding-top: 45%;
+  height: 100%;
+  width: 100%;
 }
 
 .react-player {
