--- a/src/TrailerPreview/TrailerPreview.scss
+++ b/src/TrailerPreview/TrailerPreview.scss
@@ -2,13 +2,38 @@
 
 .player-wrapper {
   position: relative;
-  padding-top: 45%;
-  height: 100%;
-  width: 100%;
+  padding-top: 41.7%;
+  z-index: 0;
 }
 
 .react-player {
   position: absolute;
   top: 0;
   left: 0;
+  object-fit: cover;
+}
+
+.trailer-info {
+  position: absolute;
+  padding: 2em;
+  color: $white;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  top: 25%;
+  right: 15%;
+  background-color: rgba(0, 0, 0, 0.55);
+  box-shadow: 0px 0px 60px 40px rgba(0, 0, 0, 0.6);
+  border-radius: 2em;
+}
+
+.trailer-movie-title {
+  border-bottom: $white 1px solid;
+  margin-bottom: 0.5em;
+  font-size: 4em;
+}
+
+.trailer-details {
+  font-size: 1.5em;
 }
