--- a/src/TrailerPreview/TrailerPreview.scss
+++ b/src/TrailerPreview/TrailerPreview.scss
@@ -4,13 +4,26 @@
   position: relative;
   padding-top: 41.7%;
   z-index: 0;
+  height: 100%;
+  width: 100%;
 }
 
 .react-player {
+  transform: scale(1.35);
   position: absolute;
   top: 0;
   left: 0;
   object-fit: cover;
+  z-index: 0;
+}
+
+.player-cover {
+  transform: scale(1.35);
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
 }
 
 .trailer-info {
@@ -22,10 +35,11 @@
   flex-direction: column;
   align-items: flex-end;
   top: 25%;
-  right: 15%;
+  right: 10%;
   background-color: rgba(0, 0, 0, 0.55);
   box-shadow: 0px 0px 60px 40px rgba(0, 0, 0, 0.6);
   border-radius: 2em;
+  // transition: all 1s ease 3s;
 }
 
 .trailer-movie-title {
