--- a/src/MovieCard/MovieCard.scss
+++ b/src/MovieCard/MovieCard.scss
@@ -1,22 +1,41 @@
 @import '../_variables.scss';
 
 .movie-card {
-  height: 20em;
-  width: 12em;
-  margin: 1em 2em;
+  position: relative;
+  height: 19em;
+  width: 13em;
+  margin: 1em 1.5em;
   background-color: $white;
+  transition: all ease 0.25s;
+  :hover > & {
+    transform: scale(1.1);
+  }
 }
 
 .homepage-img {
-  height: 83%;
+  height: 100%;
   width: 100%;
 }
 
 .movie-card-title {
-  width: 98%;
-  font-size: 1em;
-  height: 15%;
+  opacity: 0;
+  transition: all ease 0.5s;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 1) 35%
+  );
+  color: $white;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 30%;
+  font-size: 1.2em;
   display: flex;
   justify-content: center;
   align-items: center;
+  :hover > & {
+    opacity: 0.8;
+  }
 }
