--- a/src/MovieCard/MovieCard.scss
+++ b/src/MovieCard/MovieCard.scss
@@ -27,15 +27,16 @@
     rgba(0, 0, 0, 1) 35%
   );
   color: $white;
+  padding: 1.8em 0em 0em 0em;
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 30%;
-  font-size: 1.2em;
+  font-size: 1em;
   display: flex;
   justify-content: center;
   align-items: center;
   :hover > & {
-    opacity: 0.8;
+    opacity: 0.9;
   }
 }
