--- a/src/MoviePreview/MoviePreview.scss
+++ b/src/MoviePreview/MoviePreview.scss
@@ -1,6 +1,7 @@
 @import '../variables.scss';
 
 .movie-preview-page {
+  min-height: 100vh;
   height: 100%;
   width: 100%;
   margin: 0;
@@ -27,7 +28,7 @@
 
 .preview-wrapper {
   width: 80%;
-  margin: 3em;
+  margin: 5em;
   position: relative;
   background: rgba(253, 255, 252, 0.7);
   display: flex;
@@ -60,42 +61,6 @@
   margin: 0.3em 0.3em 0.3em 0;
 }
 
-.movie-preview-button {
-  position: absolute;
-  margin: 1em 2em 0 0;
-  right: 0px;
-  top: 0px;
-  width: 32px;
-  height: 32px;
-  opacity: 1;
-  outline: none;
-  background: transparent;
-  box-shadow: 0px 0px 0px transparent;
-  border: 0px solid transparent;
-  text-shadow: 0px 0px 0px transparent;
-  transition: all 1s;
-
-  &:hover::before {
-    transition: transform 0.5s cubic-bezier(0, 1.76, 0.5, -0.4);
-    transform: rotate(45deg);
-  }
-  &:hover::after {
-    transition: transform 0.5s cubic-bezier(0, 1.76, 0.5, -0.4);
-    transform: rotate(-45deg);
-  }
-}
-
-.movie-preview-button:before,
-.movie-preview-button:after {
-  position: absolute;
-  left: 15px;
-  content: ' ';
-  height: 33px;
-  width: 3px;
-  background-color: #000;
-  cursor: pointer;
-}
-
 .error-message {
   height: 100vh;
   color: $white;
@@ -104,4 +69,21 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.movie-preview-button {
+  position: absolute;
+  margin: 2em;
+  right: 0px;
+  top: 0px;
+  width: 32px;
+  height: 32px;
+  background: transparent;
+  border: 0px solid transparent;
+  transition: all 0.25s;
+  &:hover {
+    filter: invert(0.3);
+    transform: scale(1.1);
+    cursor: pointer;
+  }
 }
