--- a/src/MoviePreview/MoviePreview.scss
+++ b/src/MoviePreview/MoviePreview.scss
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .description-wrapper {
@@ -85,5 +86,137 @@
     filter: invert(0.3);
     transform: scale(1.1);
     cursor: pointer;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .movie-preview-img {
+    height: 18em;
+    margin: 2.5em;
+  }
+
+  .movie-preview-title {
+    font-size: 1.5em;
+  }
+
+  .preview-react-player {
+    transform: scale(0.9);
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .movie-preview-img {
+    height: 16em;
+  }
+
+  .movie-info-detail {
+    font-size: 0.8em;
+  }
+
+  .movie-preview-title {
+    font-size: 1em;
+  }
+
+  .preview-react-player {
+    transform: scale(0.7);
+    margin: 0.2em 0 3em 0;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .movie-description {
+    margin: 1em;
+  }
+
+  .movie-preview-img {
+    height: 14em;
+    margin: 2.5em 2em 0 1em;
+  }
+
+  .movie-info-detail {
+    font-size: 0.7em;
+  }
+
+  .movie-preview-title {
+    font-size: 0.8em;
+    margin: 2.5em 0.3em 0.3em 0;
+  }
+
+  .preview-react-player {
+    transform: scale(0.7);
+    margin: 0.2em 0 3em 0;
+  }
+
+  .trailer-header{
+    margin: 0.2em;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+
+  .movie-preview-img {
+    margin: 2em
+  }
+
+  .preview-react-player {
+    transform: scale(0.5);
+    margin: 0em;
+  }
+
+  .description-wrapper {
+    flex-direction: column;
+    width: 70%;
+  }
+
+  .movie-description {
+    height: auto;
+    width: auto;
+    flex-direction: column;
+  }
+
+  .trailer-header {
+    font-size: 1em;
+    margin-top: 2em;
+  }
+
+  .movie-preview-button {
+    margin: 0;
+    right: -10px;
+    top: 10px;
+    width: 10px;
+    height: 10px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+
+  .movie-preview-img {
+    height: 14em;
+    margin: 2em
+  }
+
+  .movie-info-detail {
+    font-size: 0.7em;
+  }
+
+  .movie-preview-title {
+    font-size: 0.8em;
+    margin-top: 0;
+  }
+  .movie-preview-trailer-section{
+    display: contents;
+    margin: auto;
+  }
+
+  .preview-react-player {
+    transform: scale(0.4);
+    margin: 0em;
+  }
+
+  .movie-preview-button {
+    right: 0px;
+    top: 10px;
+    width: 6px;
+    height: 6px;
   }
 }
