--- a/src/ErrorPage/ErrorPage.scss
+++ b/src/ErrorPage/ErrorPage.scss
@@ -1,10 +1,9 @@
-@import '../variables.scss';
+@import '../_variables.scss';
 
 .error-page {
   height: 100vh;
   color: $white;
   width: 100%;
-  // position: fixed;
   display: flex;
   flex-direction: column;
   color: #FDFFFC;
